# goodreads-normalizer

./: .gitignore  .ignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  great-docs.yml  pyproject.toml  test.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml  name_normalization.yml
.github/workflows/: ci.yml  docs.yml  release.yml
scripts/: analyse_titles.py  classify_titles.py
src/goodreads_exporter/: __init__.py
src/goodreads_exporter/models/: book.py  goodreads_row.py
src/goodreads_exporter/normalize/: books.py
src/goodreads_exporter/parsers/: book_title.py  goodreads_csv.py  regex_patterns.py
src/goodreads_normalizer/: __init__.py
src/goodreads_normalizer/cli/: main.py
src/goodreads_normalizer/data/: __init__.py  google_narrators.py  known_en_authors.py  known_en_narrators.py  known_translators.py  microsoft_narrators.py  virtual_narrators.py
src/goodreads_normalizer/io/: __init__.py  csv.py
src/goodreads_normalizer/models/: __init__.py  author.py  book.py  book_title.py  goodreads_row.py  narrator.py
src/goodreads_normalizer/normalize/: author_narrator.py  books.py
src/goodreads_normalizer/parsers/: author_narrator.py  book_title.py  goodreads_csv.py  regex_patterns.py
src/goodreads_normalizer/transform/: additional_author_field.py  books.py
src/goodreads_normalizer/validation/: author.py
tests/: test_goodreads_parser.py  test_normalize_author.py  test_normalize_number.py  test_normalize_rating.py  test_transform_author_additional_athors.py
tests/additional_authors/: test_additional_author.py
tests/author/: test_additional_author.py  test_author.py
tests/book/: test_book.py
tests/data/: test_data3.csv
tests/parse_additional_authors/: test_parse_additional_authors.py
tests/parse_title/: test_book_title_only_parser.py  test_book_title_rule_1_parser.py  test_book_title_rule_2_parser.py  test_book_title_rule_3_parser.py  test_book_title_rule_4_parser.py  test_unmatch_title.py
tests/validation/: test_validate_author_name.py
