[project]
name = "goodreads-normalizer"
version = "0.1.0"
description = "Normalize Goodreads CSV exports by cleaning author, narrator, series, and title metadata."
readme = "README.md"
authors = [{ name = "Adam.S", email = "Bas-Man@users.noreply.github.com" }]
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "isbnlib>=3.10.14",
  "pydantic>=2.13.4",
  "python-slugify>=8.0.4",
  "pyyaml>=6.0.3",
  "rapidfuzz>=3.14.5",
  "rich>=15.0.0",
  "ruamel-yaml>=0.19.1",
  "typer>=0.25.1",
]
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/Bas-Man/goodreads-normalizer"
Issues = "https://github.com/Bas-Man/goodreads-normalizer/issues"
Documentation = "https://bas-man.github.io/goodreads-normalizer"
Changelog = "https://github.com/Bas-Man/goodreads-normalizer/blob/main/CHANGELOG.md"
License = "https://github.com/Bas-Man/goodreads-normalizer/blob/main/LICENSE"

[project.scripts]
normalize-goodreads = "goodreads_normalizer.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goodreads_normalizer"]
exclude = [
  "*.typed", # Strips py.typed from the wheel file
  "tests/",  # Strips testing directories
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "tox>=4",
    "tox-uv>=1",
    "twine>=6.2.0",
]

#docs = [
#    "sphinx>=8.0",
#    "myst-parser>=4.0",
#    "furo>=2024.8.6",
#]

great-docs = ["great-docs"]

[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    ".git",
    ".github",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.mypy]
disable_error_code = ["prop-decorator"]

[tool.tox]
env_list = ["py312", "py313", "py314"]

[tool.tox.env_run_base]
runner = "uv-venv-runner"
commands = [["pytest", "{posargs:tests}"]]
dependency_groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
